--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,11 @@ services:
         hard: 65536
     volumes:
       - /docker/data/opendistro-recon-data:/usr/share/elasticsearch/data
+      - /docker/secrets/securityconfig/internal_users.yml:/usr/share/elasticsearch/plugins/opendistro_security/security_config/internal_users.yml
     ports:
-      - 9200:9200
-      - 9600:9600 # required for Performance Analyzer
+      # Those ports are only acessible via localhost
+      - 127.0.0.1:9200:9200
+      - 127.0.0.1:9600:9600 # required for Performance Analyzer
     networks:
       - opendistro-recon-net
 
